:recycle: 주석, 파라미터 이름 수정